examples/invalid/ns/memory/hello_task_glm_nested_optional_struct_payload_invalid.ns
mod cpu Main {
  struct OptionalPacket {
    value: i64?
  }

  async fn ping(packet: OptionalPacket) -> i64 {
    return 7;
  }

  fn main() -> i64 {
    return 1;
  }
}
